--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-Blog RoR Created from Getting Started - Bryan
+Blog RoR Created from Getting Started - Bryan [edited]
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
